# docs/swagger.json
@@ -92,6 +92,51 @@
                 }
             }
         },
+        "/delivery/orders": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Delivery"
+                ],
+                "summary": "Kuryenin tüm siparişlerini listeler",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.OrderResponse"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Authenticates user and returns JWT",
@@ -183,6 +228,51 @@
                         "description": "fail",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "List all orders (admin)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.OrderResponse"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -420,7 +510,7 @@
                 }
             }
         },
-        "/restaurant/orders/{id}/prepare": {
+        "/restaurant/orders/{id}/delivered": {
             "put": {
                 "security": [
                     {
@@ -433,7 +523,7 @@
                 "tags": [
                     "Order"
                 ],
-                "summary": "Mark order as prepared",
+                "summary": "Mark order as delivered",
                 "parameters": [
                     {
                         "type": "integer",
@@ -465,7 +555,7 @@
                 }
             }
         },
-        "/restaurant/orders/{id}/send": {
+        "/restaurant/orders/{id}/prepare": {
             "put": {
                 "security": [
                     {
@@ -478,7 +568,7 @@
                 "tags": [
                     "Order"
                 ],
-                "summary": "Mark order as sent",
+                "summary": "Mark order as prepared",
                 "parameters": [
                     {
                         "type": "integer",
